<resources>
    <string name="app_name">Wheel of Fortune</string>

    <!-- Fragment_game -->
    <string name="guess_button">Guess</string>
    <string name="spin_button">Spin</string>
    <string name="category">Category</string>
    <string name="letter_hint">Letter</string>

    <!-- All fragments -->
    <string name="lives">Lives</string>
    <string name="score">Score</string>

    <!-- Fragment_game_won & fragment_game_lost -->
    <string name="you_won">You Won!</string>
    <string name="you_lost">You Lost!</string>
    <string name="play_again">Play Again</string>
    <string name="score_game_over">Score:</string>
    <string name="lives_game_over">Lives:</string>
    <string name="number_of_guesses">Number of Guesses: %s</string>
    <string name="word_reveal">Word: %s</string>

    <!-- Joker Dialog -->
    <string name="miss_turn_message">Bummer! You Rolled "%s" and Lost a Life</string>
    <string name="extra_turn_message">Yay! You Rolled "%s" and Gained a Life</string>
    <string name="bankrupt_message">Dang! You Rolled "%s" and Lost a Your Points :,(</string>

    <!-- Game Quotes -->
    <string name="wrong_guess_game_quote">Wrong Guess!\nYou Lost a Life</string>
    <string name="spin_again_game_quote">You Rolled "%s"\nSpin Again!</string>
    <string name="correct_guess_game_quote">Correct Guess!\n Spin Again</string>
    <string name="initial_game_quote">Welcome!\nSpin the Wheel by Pressing "Spin" Below</string>
    <string name="is_guess_game_quote">You Rolled %s! Guess a Letter!</string>
    <string name="letters">Letters</string>

    <!-- Categories and words -->
    <string-array name="category_and_words">
        <item>Test1,AA</item>
        <item>Test2,AA</item>
        <!--<item>Animals,Mountain Lion</item>
        <item>Animals,Blobfish</item>
        <item>Animals,Chicken Turtle</item>
        <item>Animals,Leafy Seadragon</item>
        <item>Animals,Hellbender</item>
        <item>Animals,Goblin Shark</item>
        <item>Movies,The Dark Knight</item>
        <item>Movies,Inception</item>
        <item>Movies,Gladiator</item>
        <item>Movies,The Green Mile</item>
        <item>Movies,Star Wars</item>
        <item>Sports,Cycling</item>
        <item>Sports,Volleyball</item>
        <item>Sports,Swimming</item>
        <item>Sports,Tennis</item>
        <item>Sports,Badminton</item>
        <item>Sports,Soccer</item>
        <item>Sports,Ice Hockey</item>-->
    </string-array>
</resources>