<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.GameFragment">

    <data>

        <variable
            name="gameViewModel"
            type="com.example.s205350lykkehjulet.GameViewModel" />

        <variable
            name="gameFragment"
            type="com.example.s205350lykkehjulet.fragments.GameFragment" />

        <import type="com.example.s205350lykkehjulet.models.GameStage" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_score_headline"
                style="@style/gameStatHeadline"
                android:layout_height="wrap_content"
                android:text="@string/score"
                app:layout_constraintEnd_toStartOf="@+id/text_category_headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_category_headline"
                style="@style/gameStatHeadline"
                android:layout_height="wrap_content"
                android:text="@string/category"
                app:layout_constraintEnd_toStartOf="@+id/text_lives_headline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_score_headline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_lives_headline"
                style="@style/gameStatHeadline"
                android:layout_height="wrap_content"
                android:text="@string/lives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_category_headline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_score"
                style="@style/gameStat"
                android:layout_height="wrap_content"
                android:text="@{gameViewModel.score.toString()}"
                app:layout_constraintEnd_toStartOf="@+id/text_category"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_score_headline"
                tools:text="1400" />

            <TextView
                android:id="@+id/text_lives"
                style="@style/gameStat"
                android:layout_height="wrap_content"
                android:text="@{gameViewModel.lives.toString()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_category"
                app:layout_constraintTop_toBottomOf="@+id/text_lives_headline"
                tools:text="4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_category"
                style="@style/gameStat"
                android:layout_height="wrap_content"
                android:text="@{gameViewModel.category}"
                app:layout_constraintEnd_toStartOf="@+id/text_lives"
                app:layout_constraintStart_toEndOf="@+id/text_score"
                app:layout_constraintTop_toBottomOf="@+id/text_category_headline"
                tools:text="Animals" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_letter_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_category"
                tools:itemCount="11"
                tools:listitem="@layout/view_letter_card" />

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_letter_cards">

                <ImageView
                    android:id="@+id/image_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:alpha="1"
                    android:rotation="90"
                    android:src="@drawable/play"
                    android:translationZ="90dp"
                    app:tint="@color/pink_light" />

                <ImageView
                    android:id="@+id/image_luckywheel"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:rotation="16.4"
                    android:scaleType="centerInside"
                    android:src="@drawable/lucky_wheel" />
            </RelativeLayout>

            <TextView
                android:id="@+id/text_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/letters"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/relative_layout"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_letter_cards"
                tools:text="Letters" />

            <TextView
                android:id="@+id/text_guessed_characters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@{gameViewModel.guessedCharacterString}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/relative_layout"
                app:layout_constraintTop_toBottomOf="@+id/text_letter"
                tools:text="a\nb\nc" />

            <TextView
                android:id="@+id/text_game_quote"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginHorizontal="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@{gameViewModel.gameQuote}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relative_layout"
                tools:text="You rolled 1000!\n Guess a letter!" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_letter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:enabled="@{gameViewModel.gameStage==GameStage.GUESS ? true : false}"
                android:hint="@string/letter_hint"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_game_quote">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_letter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                    android:gravity="center_horizontal"
                    android:maxLength="1"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_guess"
                style="@style/buttonStyle"
                android:layout_marginTop="8dp"
                android:enabled="@{gameViewModel.gameStage==GameStage.GUESS ? true : false}"
                android:onClick="@{() -> gameFragment.submitGuess()}"
                android:text="@string/guess_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_spin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_letter" />

            <Button
                android:id="@+id/button_spin"
                style="@style/buttonStyle"
                android:layout_marginTop="8dp"
                android:enabled="@{gameViewModel.gameStage==GameStage.SPIN ? true : false}"
                android:onClick="@{() -> gameFragment.spinWheel()}"
                android:text="@string/spin_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_guess"
                app:layout_constraintTop_toBottomOf="@+id/text_input_letter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>